--- a/pi/style.css
+++ b/pi/style.css
@@ -45,7 +45,7 @@ h1 {
 
 [data-testid="stSuccess"] {
     background-color: #007BFF; /* Bright Bootstrap blue */
-    color: white;              /* White text for contrast */
+    color: black;              /* White text for contrast */
     font-size: 22px;
     border-radius: 10px;
     padding: 15px;
