--- a/pi/style.css
+++ b/pi/style.css
@@ -2,7 +2,7 @@
 
 /* Background Image Styling */
 .stApp {
-    background: url("https://unsplash.com/photos/laptop-turned-on-Eti6ph51H4AMHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") no-repeat center center fixed;
+    background: url("https://unsplash.com/photos/laptop-turned-on-Eti6ph51H4A") no-repeat center center fixed;
     background-size: cover;
     opacity: 0.99;
 }
